--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -12,6 +12,7 @@ body {
   width: 100%;
   background-image: linear-gradient(260deg, #2376ae 0%, #c16ecf 100%);
   position: absolute;
+  z-index: 1;
 }
 /* The sticky class is added to the navbar with JS when it reaches its scroll position */
 .sticky {
@@ -23,12 +24,16 @@ body {
 .nav > .nav-header {
   display: inline;
 }
+.navbar-brand {
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+}
 
 .nav > .nav-header > .nav-title {
-  display: inline-block;
-  font-size: 22px;
-  color: #fff;
-  padding: 10px 10px 10px 10px;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
 }
 
 .nav > .nav-btn {
@@ -36,8 +41,8 @@ body {
 }
 
 .nav > .nav-links {
-  float: right;
   font-size: 20px;
+  float: right;
 }
 
 .nav > .nav-links > a {
@@ -59,13 +64,13 @@ body {
   .nav > .nav-btn {
     display: inline-block;
     position: absolute;
-    right: 0px;
-    top: 0px;
+    right: 7px;
+    top: 4px;
   }
   .nav > .nav-btn > label {
     display: inline-block;
-    width: 50px;
-    height: 50px;
+    width: 55px;
+    height: 55px;
     padding: 13px;
   }
   .nav > .nav-btn > label:hover,
