--- a/src/pages/About/About.css
+++ b/src/pages/About/About.css
@@ -1,6 +1,10 @@
 #img {
     border-radius: 50%;
 }
-.container {
-    margin-top: 20px;
+.about {
+    padding-top: 100px;
+}
+
+.canon-img {
+    width: 100%;
 }
